--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<a href="https://www.iteldomingo.com"><img src="img/second-logo.png"></a>
 	</div>
 
-<nav class="navbar navbar-expand-lg ml-auto mr-auto col-12">
+<nav class="navbar navbar-expand-lg col-12">
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mx-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
       </li>
