--- a/index.html
+++ b/index.html
@@ -9,53 +9,78 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 
 <body>
 <div class="container">
 	<div class="row">
-
-	<div class="main-logo text-center col-12">
-		<a href="https://www.iteldomingo.com"><img src="img/second-logo.png"></a>
+		<div class="main-logo text-center col-12">
+			<a href="https://www.iteldomingo.com">
+				<img src="img/second-logo.png">
+			</a>
+		</div>
 	</div>
-
-<nav class="navbar navbar-expand-lg col-12">
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Work</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">For you</a>
-      </li>
-     
-    </ul>
-  </div>
-</nav>
-<hr>
-
-
-
-
-
-
-
-
-	</div> 
 </div>
 
 
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+	    <div class="navbar-nav mx-auto">
+		      <a class="nav-item nav-link active" href="#">About<span class="sr-only">(current)</span></a>
+		      <a class="nav-item nav-link" href="#">Projects</a>
+		      <a class="nav-item nav-link" href="#">Contact</a>
+		      <a class="nav-item nav-link" href="#">For you</a>
+
+	    </div>
+  </div>
+</nav>
+<hr>
+
+<div class="hero-body container">
+	<div class="row">
+
+		<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit</b>. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+
+		Curabitur sodales ligula in libero. <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit</b>. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. 
+
+		Mauris ipsum. <b>Aenean quam</b>. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. <b>Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa</b>. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. 
+		</p>
+
+	</div>
+</div>
 
 
+<!--Footer-->
 
+		<div class="container">
+			<div class="row">
 
+				<div class="col-12 social-section">
+					<div class="text-center"><hr class="footer-hr">
+
+						<a href="https://twitter.com/ITELdomingo" class="btn btn-default btn-lg social-button link-twitter"><i class="fab fa-twitter"></i>
+						</a>
+
+						<a href="https://www.linkedin.com/in/itel-domingo-440041147/" class="btn btn-default btn-lg social-button link-linkedin"><i class="fab fa-linkedin-in"></i>
+						</a>
+          <a href="https://www.instagram.com/migswanders/" class="btn btn-default btn-lg social-button link-instagram"><i class="fab fa-instagram"></i>
+						</a>
+						 <p class="author">Made with <i class="fa fa-heart"></i> by <strong>Itel</strong></h4>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	</footer>
 
 
     <!-- jQuery library -->
